--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,32 @@
-*{
+@import url("https://fonts.googleapis.com/css2?family=Glory:wght@300;400;500;600&display=swap");
+
+* {
     padding: 0;
     margin: 0;
-    font-family: "Akaya Telivigala", monospace, sans-serif;
-    font-size: 22px;
+    font-family: "Glory", sans-serif;
+    /* font-size: 22px; */
 }
-body{
+
+body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     min-height: 90vh;
     width: 100%;
-    text-align: center;
-    background-color: #e3e3e3;
+    background-color: #FFD0D0;
     padding: 5px 0;
 }
-h1{
+
+h1 {
+    text-align: center;
     color: #262834;
-    font-size: 22px;
+    font-size: 36px;
     padding: 8px;
 }
-.container{
+
+.container {
     width: 96%;
     margin: 0 auto;
-    background-color: #080808;
     padding: 10px 5px 5px 5px;
     box-sizing: border-box;
     border-radius: 4px;
@@ -31,55 +35,132 @@ h1{
     -ms-border-radius: 4px;
     -o-border-radius: 4px;
 }
-.btns{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: minmax(60px, auto);
+
+.btns {
+    display: flex;
+    justify-content: space-between;
 }
-.btns button{
+
+.btns button {
     padding: 8px;
-    margin: 5px;
-    background-color: #262834;
-    color: #e3e3e3;
+    width: 34%;
+    font-size: 22px;
+    margin: 7px;
+    color: black;
+    border: 1px solid #56cbdb;
     border: none;
     cursor: pointer;
     border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
-    font-weight: 500;
+    font-weight: 700;
+    height: 50px;
 }
-.btns button.btn{
-    background-color: #56cbdb;
-    color: #262834;
-    font-weight: bold;
+
+.active {
+    background-color: #01abc9;
 }
-.btns button:first-of-type{
-    grid-column: 1/3;
-    grid-row: 1;
-}
-.btns button:last-of-type{
-    grid-column: 3/6;
-    grid-row: 1;
-}
-textarea{
+
+textarea {
     width: calc(100% - 10px);
     height: calc(100vh - 150px);
     border: none;
     outline: none;
-    background-color: #121212;
     resize: none;
     border-radius: 4px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
     -o-border-radius: 4px;
-    color: #e3e3e3;
+    color: #000000;
     padding: 5px;
     box-sizing: border-box;
     margin: 5px 5px 0px 5px;
+    letter-spacing: 0.3px;
+    font-family: monospace, sans-serif;
+    font-size: 25px;
+}
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    padding: 12px;
+    border-radius: 4px;
+    box-shadow: 0px 0px 2px 2px #32323232;
+    background-color: #fbfbfb;
+    height: 100%;
+    width: 100%;
+    max-width: 700px;
+    margin: 30px auto;
+}
+
+.editor-container {
+    border: 1px solid #c1ece4;
+    border-radius: 4px;
+    overflow: hidden;
+    padding: 6px;
+    background-color: #fbfbfb;
+    height: 100%;
+}
+
+.docs-container {
+    height: calc(100vh - 150px);
+    border: none;
+    outline: none;
+    color: black;
+    overflow: scroll;
+    padding: 19px;
     letter-spacing: 0.2px;
     font-family: monospace, sans-serif;
     font-size: 20px;
+    overflow-x: hidden;
 }
+
+.docs-container ul {
+    list-style: none;
+}
+
+.main-syntax {
+    border: 1px solid white;
+    padding: 20px;
+}
+.main-syntax ul li {
+    word-break: break-word;
+}
+
+.main-syntax h2 {
+    font-size: 40px;
+    background-color: #ffd0d0;
+    font-weight: 700;
+    width: fit-content;
+    padding: 9px;
+    border-radius: 5px;
+}
+
+.main-syntax p {
+    font-weight: 500;
+    margin: 18px 0;
+    letter-spacing: 0.5px;
+    font-size: 21px;
+}
+
+.example {
+    word-break: break-word;
+    margin: 14px 0;
+    line-height: 30px;
+    background-color: #e0e0e252;
+    border: 1px solid rgb(251 160 160 / 49%);
+    border-radius: 4px;
+    padding: 10px 15px;
+    border-left: 7px solid #ffd0d0;
+}
+
+.example h3 {
+    font-size: 27px;
+    letter-spacing: 1px;
+    color: #01abc9;
+}
+
+.example * {
+    margin: 15px 0;
+}
+
