--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ h1 {
     font-size: 22px;
     margin: 7px;
     color: black;
-    border: 1px solid #56cbdb;
+    border: 2px solid #01abc9;
     border: none;
     cursor: pointer;
     border-radius: 4px;
@@ -96,7 +96,6 @@ textarea {
 .editor-container {
     border: 1px solid #c1ece4;
     border-radius: 4px;
-    overflow: hidden;
     padding: 6px;
     background-color: #fbfbfb;
     height: 100%;
@@ -107,12 +106,32 @@ textarea {
     border: none;
     outline: none;
     color: black;
-    overflow: scroll;
+    overflow-y: scroll;
     padding: 19px;
     letter-spacing: 0.2px;
     font-family: monospace, sans-serif;
     font-size: 20px;
     overflow-x: hidden;
+}
+
+.docs-container::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #fbfbfb;
+}
+
+.docs-container::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #fbfbfb;
+}
+
+.docs-container::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #01abc9;
 }
 
 .docs-container ul {
@@ -134,6 +153,8 @@ textarea {
     width: fit-content;
     padding: 9px;
     border-radius: 5px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    letter-spacing: 2px;
 }
 
 .main-syntax p {
@@ -163,4 +184,3 @@ textarea {
 .example * {
     margin: 15px 0;
 }
-
